--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,28 @@
 header {
-    position: fixed;
-     top: 0% ;
+     position: absolute;
+     top: 0%;
      right: 0%; 
-     color: #f7d4e7;
+     color: #ffffff;
      text-align: center;
      width: 100%; 
-     background-color:#6b414f ; 
+     background-color:#5a264d ;
      font-family: fantasy;
+
+}
+
+.a:hover{
+    color:black;
+    text-decoration: none;
 }
 
 h2{
-    color: #3f282f;
+    color: #473a3e;
 }
 
 body {
     margin: 60px;
     padding: 40px;
+   
 }
 
 ul {
@@ -23,7 +30,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #6b414f;
+   
     font-size: larger;
 }
 
@@ -42,7 +49,9 @@ li a {
 .boxy {
     background: #f7d4e7;
     border: solid 4px #6b414f;
-    margin: 20px;
+    box-shadow: 5px 5px 10px grey;
+    
+
 }
 
 #asdf {
@@ -55,10 +64,7 @@ li a {
     font-family: cursive;
 }
 
-header ul a:hover {
-    text-decoration: dashed #7a2956 ;
-    color: rgb(0, 0, 0);
-}
+
 
 footer{
     background-color: #6b414f;
@@ -70,16 +76,60 @@ footer{
     right: 0%;
 }
 
-section {
+.about{
     background-color: #6b414f; 
     margin: 40px; 
     padding: 60px;
+    color: white;
 }
 
-.btn .btn-info {
-background-color: #6b414f;
+#asd{
+    padding: 80px;
+    margin: 50px;
+    background-color: #6b414f;
+    color: #f7d4e7;
+    font-size: larger;
 }
 
-.container{
-    padding:5px;
+.button {
+    border-radius: 4px;
+    background-color: #6b414f;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 14px;
+    padding: 20px;
+    width: 200px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
 }
+
+.button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  
+  .button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.1s;
+  }
+  
+  .button:hover span {
+    padding-right: 25px;
+  }
+  
+  .button:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
+
+  .container{
+    margin-top: 5%;
+  }
